--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<form
-      action="https://formspree.io/f/xgerylwa" 
-      method="post"
- >
+<form id="fs-frm" name="survey-form" accept-charset="utf-8" action="https://formspree.io/f/xgerylwa" method="post">
   <fieldset id="fs-frm-inputs">
     <label for="full-name">Full Name</label>
     <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
