--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <label for="email-address">Email Address</label>
     <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
     <fieldset id="fs-frm-selects">
-      <label for="timely">What would you like from the lunch menu.</label>
-      <select name="timely" id="timely" required="">
+      <label for="main">What would you like from the lunch menu.</label>
+      <select name="main" id="main" required="">
         <option value="Choose" selected="" disabled="">Choose</option>
-        <option value="5.5">Soup of the Day with Guiness Bread</option>
-        <option value="8">Crispy protavogie Prawns with napa slaw, chili jam and lemon mayo</option>
-        <option value="7">Chicken and Chorizo Salad</option>
-        <option value="10">Holohans pan boxty with choice fillings </option>
-        <option value="10">Truffle Fermanagh Boxty, brocoli,mushroom, spinach,shallots and blue cheese</option>
-        <option value="10">Hake with mash, sweetcorn, spinach & crayfish butter</option>
-      <option value="10">Pork and Leek Sausage and Mash</option>
+        <option value="Soup">Soup of the Day with Guiness Bread</option>
+        <option value="Prawns">Crispy protavogie Prawns with napa slaw, chili jam and lemon mayo</option>
+        <option value="ChickenChorizoSalad">Chicken and Chorizo Salad</option>
+        <option value="Boxty">Holohans pan boxty with choice fillings </option>
+        <option value="TruffleBoxty">Truffle Fermanagh Boxty, brocoli,mushroom, spinach,shallots and blue cheese</option>
+        <option value="Hake">Hake with mash, sweetcorn, spinach & crayfish butter</option>
+      <option value="Sausage+Mash">Pork and Leek Sausage and Mash</option>
       </select>
-      <label for="timely">2. The quality of work was high in quality.</label>
-      <select name="quality" id="quality" required="">
+      <label for="pudding">2. The quality of work was high in quality.</label>
+      <select name="pudding" id="pudding" required="">
         <option value="Choose" selected="" disabled="">Choose</option>
-        <option value="6">Rum Pannacota</option>
-        <option value="6">Sticky Toffee Guinness Sundae</option>
-        <option value="6">Lemon Tart</option>
-        <option value="8">Cheese Board</option>
+        <option value="Pana">Rum Pannacota</option>
+        <option value="Sticky">Sticky Toffee Guinness Sundae</option>
+        <option value="Lemon">Lemon Tart</option>
+        <option value="Cheese">Cheese Board</option>
        </select>
     </fieldset>
     <label for="message">Please let us know if you have any allergies</label>
