--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 #fs-frm input:focus,
 #fs-frm select:focus,
 #fs-frm textarea:focus {
-  background-color: white;
+  background-color: red;
   outline-style: solid;
   outline-width: thin;
   outline-color: gray;
