--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <option value="Hake">Hake with mash, sweetcorn, spinach & crayfish butter</option>
       <option value="Sausage+Mash">Pork and Leek Sausage and Mash</option>
       </select>
-      <label for="pudding">2. And for pudding?.</label>
+      <label for="pudding">2. And for pudding?</label>
       <select name="pudding" id="pudding" required="">
         <option value="Choose" selected="" disabled="">Choose</option>
         <option value="Pana">Rum Pannacota</option>
