--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <option value="Cheese">Cheese Board</option>
        </select>
     </fieldset>
-    <label for="message">Please let us know if you have any allergies</label>
-    <textarea rows="3" name="message" id="message" placeholder="Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor." required=""></textarea>
+    <label for="Allergies">Please let us know if you have any allergies</label>
+    <textarea rows="3" name="Allergies" id="Allergies" placeholder="Hard work??" required=""></textarea>
     <input type="hidden" name="_subject" id="email-subject" value="Survey Responses">
   </fieldset>
   <input type="submit" value="Send Responses">
