--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
       <label for="main">What would you like from the lunch menu.</label>
       <select name="main" id="main" required="">
         <option value="Choose" selected="" disabled="">Choose</option>
-        <option value="Soup">Soup of the Day with Guiness Bread</option>
-        <option value="Prawns">Crispy protavogie Prawns with napa slaw, chili jam and lemon mayo</option>
-        <option value="ChickenChorizoSalad">Chicken and Chorizo Salad</option>
-        <option value="Boxty">Holohans pan boxty with choice fillings </option>
-        <option value="TruffleBoxty">Truffle Fermanagh Boxty, brocoli,mushroom, spinach,shallots and blue cheese</option>
-        <option value="Hake">Hake with mash, sweetcorn, spinach & crayfish butter</option>
-      <option value="Sausage+Mash">Pork and Leek Sausage and Mash</option>
+        <option value="Soup of the Day with Guiness Bread">Soup of the Day with Guiness Bread</option>
+        <option value="Crispy protavogie Prawns with napa slaw, chili jam and lemon mayo">Crispy protavogie Prawns with napa slaw, chili jam and lemon mayo</option>
+        <option value="Chicken and Chorizo Salad">Chicken and Chorizo Salad</option>
+        <option value="Holohans pan boxty with choice fillings">Holohans pan boxty with choice fillings </option>
+        <option value="Truffle Fermanagh Boxty, brocoli,mushroom, spinach,shallots and blue cheese">Truffle Fermanagh Boxty, brocoli,mushroom, spinach,shallots and blue cheese</option>
+        <option value="Hake with mash, sweetcorn, spinach & crayfish butter">Hake with mash, sweetcorn, spinach & crayfish butter</option>
+      <option value="Pork and Leek Sausage and Mash">Pork and Leek Sausage and Mash</option>
       </select>
       <label for="pudding">2. And for pudding?</label>
       <select name="pudding" id="pudding" required="">
         <option value="Choose" selected="" disabled="">Choose</option>
-        <option value="Pana">Rum Pannacota</option>
-        <option value="Sticky">Sticky Toffee Guinness Sundae</option>
-        <option value="Lemon">Lemon Tart</option>
-        <option value="Cheese">Cheese Board</option>
+        <option value="Rum Pannacota">Rum Pannacota</option>
+        <option value="Sticky Toffee Guinness Sundae">Sticky Toffee Guinness Sundae</option>
+        <option value="Lemon Tart">Lemon Tart</option>
+        <option value="Cheese Board">Cheese Board</option>
        </select>
     </fieldset>
     <label for="Allergies">Please let us know if you have any allergies</label>
     <textarea rows="3" name="Allergies" id="Allergies" placeholder="Hard work??" required=""></textarea>
-    <input type="hidden" name="_subject" id="email-subject" value="Survey Responses">
+    <input type="hidden" name="Allergies" id="Allergies" value="Survey Responses">
   </fieldset>
   <input type="submit" value="Send Responses">
 </form><style>/* reset */
